--- a/style.css
+++ b/style.css
@@ -217,7 +217,7 @@ input[type="range"]::-webkit-slider-thumb {
     appearance: none;
     background: #00f; /* 파란색으로 슬라이더 버튼 색 */
     border-radius: 50%;
-    width: 11px; /* 크기 약간 감소소 */
+    width: 11px; /* 크기 약간 감소 */
     height: 11px; /* 크기 약간 감소 */
 }
 
